# goit-pythonweb-hw-10

./: main.py  pyproject.toml
data_base/: connect.py  models.py  seeds.py  users.db
migrations/: env.py
migrations/versions/: 0dde5b1ef470_add_hash_and_avatar.py  31c708aa5282_initial_migration.py  62bd87baaa13_add_to_model_user_filed_confirmed.py
routers/: auth.py  email.py  users.py
schemas/: auth.py  user.py
services/: auth.py  avatar.py  email.py  users.py
settings/: base.py  email.py
